why how page layout updated

--- a/themes/oora/pages/whyhow.htm
+++ b/themes/oora/pages/whyhow.htm
@@ -80,7 +80,7 @@ is_hidden = 0
 			</div>
 		</div>
 
-		<div class="col-md-12" style="background-color: #395D68; height: 100px;">
+		<div class="col-md-12" style="background-color: #65A3B7; height: 100px;">
 			<h3 class="text-center" style="padding: 13px;"> How we do it </h3>
 		</div>
 		<div class="col-md-12 imageCover" style="background-image: url({{ 'assets/images/whyhow/directaccess.jpg'|theme }}); height: 400px;">
@@ -110,7 +110,7 @@ is_hidden = 0
 			</div>
 			<div class="row">
 				<div class="col-md-12" style="background-color: #333333; height: 300px;">
-					<h3 class="text-center"> Partner network in India </h3>
+					<h3 style="padding: 40px 80px 0px 80px;" class="text-center"> Partner network in India </h3>
 					<p class="text-justify" style="padding: 0px 80px;">
 						<b>
 							Siri has partner network in India who leading in software industry.
@@ -120,20 +120,52 @@ is_hidden = 0
 			</div>
 		</div>
 
-		<div class="col-md-6 imageCover" style="background-image: url({{ 'assets/images/whyhow/interview.jpg'|theme }}); height: 600px;">
+		<div class="col-md-4">
+			<div class="row">
+				<div class="col-md-12 imageCover" style="background-image: url({{ 'assets/images/whyhow/interview.jpg'|theme }}); height: 300px;">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12" style="background-color: #94B5C6; height: 300px;">
+					<h3 style="padding: 40px 80px 0px 80px;" class="text-center"> Strong Selection Process </h3>
+					<p class="text-justify" style="padding: 0px 80px;">
+						<b>
+							Siri has expert group to filter out the talented resources from the IT market.
+						</b>
+					</p>
+				</div>
+			</div>
 		</div>
 
-		<div class="col-md-6">
+
+		<div class="col-md-4">
 			<div class="row">
-				<div class="col-md-12 imageCover" style="background-image: url({{ 'assets/images/whyhow/partnernetwork2.png'|theme }}); height: 300px;">
+				<div class="col-md-12 imageCover" style="background-image: url({{ 'assets/images/whyhow/migration.jpg'|theme }}); height: 300px;">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12" style="background-color: #355661; height: 300px;">
+					<h3 style="padding: 40px 80px 0px 80px;" class="text-center"> Speedy Migration Process </h3>
+					<p class="text-justify" style="padding: 0px 80px;">
+						<b>
+							Siri has a deep understanding of immigration laws and processes which ensures the presence of resoure at the right time and place.
+						</b>
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-4">
+			<div class="row">
+				<div class="col-md-12 imageCover" style="background-image: url({{ 'assets/images/whyhow/bestengineer.jpg'|theme }}); height: 300px;">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12" style="background-color: #333333; height: 300px;">
-					<h3 class="text-center"> Partner network in India </h3>
+					<h3 style="padding: 40px 80px 0px 80px;" class="text-center"> Bring Best Engineers to you </h3>
 					<p class="text-justify" style="padding: 0px 80px;">
 						<b>
-							Siri has partner network in India who leading in software industry.
+							Siri promises to bring the best engineers to you.
 						</b>
 					</p>
 				</div>
