--- a/themes/oora/pages/contactus.htm
+++ b/themes/oora/pages/contactus.htm
@@ -11,7 +11,7 @@ function onSubmit()
 {
 	// Get fields
 	$data = Input::all();
-	$rules = ['name' => 'required|min:3', 'email' => 'required|email', 'message' => 'required'];
+	$rules = ['name' => 'required|min:3', 'email' => 'required|email', 'messages' => 'required'];
 	$msgs = ['required' => 'This field is required', 'email' => 'Please enter a valid email'];
 	$errorMessages = "";
 
@@ -24,9 +24,9 @@ function onSubmit()
 		$result = false;
 		$errorMessages = $v->messages();
 	} else {
-		Mail::send('laminsanneh.flexicontact::emails.message', $data, function($message)
+		Mail::send('rajesh.email::mail.contactus', $data, function($message) use ($data)
 		{
-			$message->from(post('email'), post('name'));
+			$message->from("info@4techies.in", post('name'));
 			$message->to('cleancode2015@gmail.com')->subject('Contact Us');
 		});
 
@@ -99,9 +99,9 @@ function onSubmit()
 						</div>
 					</div>
 					<div id="group-message" class="form-group">
-						<label class="control-label col-sm-2" for="message">Message:</label>
+						<label class="control-label col-sm-2" for="messages">Message:</label>
 						<div class="col-sm-10">
-							<textarea class="form-control" rows="5" id="message" name="message" placeholder="Enter your message"> </textarea>
+							<textarea class="form-control" rows="5" id="message" name="messages" placeholder="Enter your message"> </textarea>
 							<span class="help-block"></span>
 						</div>
 					</div>
