--- a/themes/oora/pages/contactus.htm
+++ b/themes/oora/pages/contactus.htm
@@ -5,8 +5,10 @@ description = "Contact Us."
 is_hidden = 0
 
 [contactForm]
+injectBootstrapAssets = 1
+injectMainScript = 1
 ==
-
+<?php
 function onSubmit()
 {
 	// Get fields
@@ -38,9 +40,7 @@ function onSubmit()
         'message' => $errorMessages
 	];
 }
-
-
-
+?>
 ==
 <!-- **********************************************************
 				HEADER Content
@@ -143,9 +143,9 @@ function onSubmit()
 					$("#group-email .help-block").text("");
 				}
 
-				if(data.message.message) {
+				if(data.message.messages) {
 					$("#group-message").addClass('has-error');
-					$("#group-message .help-block").text(data.message.message[0]);
+					$("#group-message .help-block").text(data.message.messages[0]);
 				} else {
 					$("#group-message").removeClass('has-error');
 					$("#group-message .help-block").text("");
@@ -198,7 +198,7 @@ function onSubmit()
 		function loadScript() {
 			var script = document.createElement("script");
 			script.type = "text/javascript";
-			script.src = "http://maps.google.com/maps/api/js?sensor=false&callback=initialize";
+			script.src = "http://maps.google.com/maps/api/js?key=AIzaSyCnD_J_MxX_N2II8YzZNaUL22WYS_VwNE8&callback=initMap&sensor=false&callback=initialize";
 			document.body.appendChild(script);
 		};
 
