page layout issues are corrected

--- a/themes/oora/pages/whyhow.htm
+++ b/themes/oora/pages/whyhow.htm
@@ -44,20 +44,20 @@ is_hidden = 0
 <div class="container-fluid brightFont" id="read-more">
 	<div class="row">
 		<div class="col-md-6" style="background-color: #333333; height: 600px;">
-			<h3 class="text-center"> Why we do it </h3>
-			<p class="text-justify" style="padding: 0px 80px;">
+			<h3 class="text-center whyhowheader"> Why we do it </h3>
+			<p class="text-justify whyhowpara">
 				<b>
 					The software sector in Sweden - including both software products and software services - large in proportion to the population and by international standards, is now estimated to represent as much as 40 - 50% of the total IT sector, i.e. SEK 290,000 milllion. It is also still one of the nation's most successful growing industry segments. There are approximately 500 software companies in Sweden.
 				</b>
 			</p>
 
-			<p class="text-justify" style="padding: 0px 80px;">
+			<p class="text-justify whyhowpara">
 				<b>
 					Sweden is the birthplace of many successful innovative companies. According to British Wired Magazine, Sweden has the most digitally connected economy in the world, and its forward-thinking culture fosters innovation.
 				</b>
 			</p>
 
-			<p class="text-justify" style="padding: 0px 80px;">
+			<p class="text-justify whyhowpara">
 				<b>
 					As of today, the Swedish IT-industry’s biggest problem is the competence shortage. We have a solution.
 				</b>
@@ -70,8 +70,8 @@ is_hidden = 0
 			</div>
 			<div class="row">
 				<div class="col-md-12" style="background-color: #355761; height: 300px;">
-					<h3 style="padding: 40px 80px 0px 80px;"> Swedish IT-industry's competence shortage </h3>
-					<p style="padding: 0px 80px;">
+					<h3 class="text-center whyhowheader"> Swedish IT-industry's competence shortage </h3>
+					<p class="text-justify whyhowpara">
 						<b>
 							Siri plays a major role to solve this issue.
 						</b>
@@ -81,7 +81,7 @@ is_hidden = 0
 		</div>
 
 		<div class="col-md-12" style="background-color: #65A3B7; height: 100px;">
-			<h3 class="text-center" style="padding: 13px;"> How we do it </h3>
+			<h3 class="text-center whyhowOnlyHeader"> How we do it </h3>
 		</div>
 		<div class="col-md-12 imageCover" style="background-image: url({{ 'assets/images/whyhow/directaccess.jpg'|theme }}); height: 400px;">
 		</div>
@@ -89,8 +89,8 @@ is_hidden = 0
 		<div class="col-md-6">
 			<div class="row">
 				<div class="col-md-12" style="background-color: #65A3B7; height: 300px;">
-					<h3 style="padding: 40px 80px 0px 80px;"> Direct access to IT resource market </h3>
-					<p style="padding: 0px 80px;">
+					<h3 class="text-center whyhowheader"> Direct access to IT resource market </h3>
+					<p class="text-justify whyhowpara">
 						<b>
 							Siri has links all over the world and many tie-ups with worldwide IT companies.
 						</b>
@@ -110,8 +110,8 @@ is_hidden = 0
 			</div>
 			<div class="row">
 				<div class="col-md-12" style="background-color: #333333; height: 300px;">
-					<h3 style="padding: 40px 80px 0px 80px;" class="text-center"> Partner network in India </h3>
-					<p class="text-justify" style="padding: 0px 80px;">
+					<h3 class="text-center whyhowheader" class="text-center"> Partner network in India </h3>
+					<p class="text-justify whyhowpara">
 						<b>
 							Siri has partner network in India who leading in software industry.
 						</b>
@@ -127,8 +127,8 @@ is_hidden = 0
 			</div>
 			<div class="row">
 				<div class="col-md-12" style="background-color: #94B5C6; height: 300px;">
-					<h3 style="padding: 40px 80px 0px 80px;" class="text-center"> Strong Selection Process </h3>
-					<p class="text-justify" style="padding: 0px 80px;">
+					<h3 class="text-center whyhowheader" class="text-center"> Strong Selection Process </h3>
+					<p class="text-justify whyhowpara">
 						<b>
 							Siri has expert group to filter out the talented resources from the IT market.
 						</b>
@@ -145,8 +145,8 @@ is_hidden = 0
 			</div>
 			<div class="row">
 				<div class="col-md-12" style="background-color: #355661; height: 300px;">
-					<h3 style="padding: 40px 80px 0px 80px;" class="text-center"> Speedy Migration Process </h3>
-					<p class="text-justify" style="padding: 0px 80px;">
+					<h3 class="text-center whyhowheader" class="text-center"> Speedy Migration Process </h3>
+					<p class="text-justify whyhowpara">
 						<b>
 							Siri has a deep understanding of immigration laws and processes which ensures the presence of resoure at the right time and place.
 						</b>
@@ -162,8 +162,8 @@ is_hidden = 0
 			</div>
 			<div class="row">
 				<div class="col-md-12" style="background-color: #333333; height: 300px;">
-					<h3 style="padding: 40px 80px 0px 80px;" class="text-center"> Bring Best Engineers to you </h3>
-					<p class="text-justify" style="padding: 0px 80px;">
+					<h3 class="text-center whyhowheader" class="text-center"> Bring Best Engineers to you </h3>
+					<p class="text-justify whyhowpara">
 						<b>
 							Siri promises to bring the best engineers to you.
 						</b>
