--- a/themes/oora/pages/services/webdevelopment.htm
+++ b/themes/oora/pages/services/webdevelopment.htm
@@ -6,7 +6,7 @@ is_hidden = 0
 ==
 
 <!-- **********************************************************
-	 			HEADER Content 
+	 			HEADER Content
 	 ********************************************************** -->
 <div class="container-fluid" style="background-color: #414547;">
 	<div class="container">
@@ -25,7 +25,7 @@ is_hidden = 0
 
 
 <!-- **********************************************************
-	 			BODY Content 
+	 			BODY Content
 	 ********************************************************** -->
 <div class="container">
 	<div id="content">
@@ -38,7 +38,7 @@ is_hidden = 0
 	</div>
 </div>
 
-<div class="wow fadeInUp container-fluid page-banner-fullsize" style="background-image: url({{ 'assets/images/webdevelopment/webdevelopment.png'|theme }});" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+<div class="wow fadeInUp container-fluid page-banner-fullsize" style="background-image: url({{ 'assets/images/webdevelopment/fullscreen_webdevelopment.jpg'|theme }});">
 		<!-- screen content -->
 		<div class="row page-content1-bg">
 			<div class="col-lg-6 page-content1-left-side vcenter" style="background-color: rgba(34, 33, 37, 0.7);">
@@ -48,4 +48,36 @@ is_hidden = 0
 			</div>
 		</div>
 </div>
+
+<div class="wow fadeInUp container" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+	<div id="content">
+		<!-- screen content -->
+		<div class="row">
+			<div class="col-lg-12">
+				{% content 'webdevelopment/content3.md' %}
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="wow fadeInLeft container-fluid page-bullet-points-container" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+	<div class="container">
+		<div class="page-bullet-points page-bullet-points-one-line">
+			{% content 'webdevelopment/content4.md' %}
+		</div>
+	</div>
+</div>
+
+
+<div class="container">
+	<!-- screen content -->
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-banner-fullsize" style="background-image: url({{ 'assets/images/webdevelopment/webtechnologies.jpg'|theme }});">
+			</div>
+		</div>
+	</div>
+</div>
+
 
