--- a/themes/oora/pages/services/mobilapplications.htm
+++ b/themes/oora/pages/services/mobilapplications.htm
@@ -6,7 +6,7 @@ is_hidden = 0
 ==
 
 <!-- **********************************************************
-	 			HEADER Content 
+	 			HEADER Content
 	 ********************************************************** -->
 <div class="container-fluid" style="background-color: #414547;">
 	<div class="container">
@@ -25,7 +25,7 @@ is_hidden = 0
 
 
 <!-- **********************************************************
-	 			BODY Content 
+	 			BODY Content
 	 ********************************************************** -->
 <div class="container">
 	<div id="content">
@@ -38,14 +38,37 @@ is_hidden = 0
 	</div>
 </div>
 
-<div class="wow fadeInUp container-fluid page-banner-fullsize" style="background-image: url({{ 'assets/images/mobilapplications/mobileapps.jpg'|theme }});" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+<div class="wow fadeInUp container-fluid page-banner-fullsize" style="background-image: url({{ 'assets/images/mobileapplications/fullscreen_mobileapp.png'|theme }});">
+</div>
+
+<div class="wow fadeInUp container" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+	<div id="content">
 		<!-- screen content -->
-		<div class="row page-content1-bg">
-			<div class="col-lg-6 page-content1-left-side vcenter" style="background-color: rgba(34, 33, 37, 0.7);">
-				{% content 'mobilapplications/content2.md' %}
-			</div>
-			<div class="col-lg-6 page-content-right-side">
+		<div class="row">
+			<div class="col-lg-12">
+				{% content 'mobilapplications/content3.md' %}
 			</div>
 		</div>
+	</div>
 </div>
+
+
+<div class="wow fadeInLeft container-fluid page-bullet-points-container" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+	<div class="container">
+		<div class="page-bullet-points page-bullet-points-one-line">
+			{% content 'mobilapplications/content4.md' %}
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<!-- screen content -->
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-banner-fullsize" style="background-image: url({{ 'assets/images/mobileapplications/mobile-application.png'|theme }});">
+			</div>
+		</div>
+	</div>
+</div>
+
 
