--- a/themes/oora/pages/aboutus.htm
+++ b/themes/oora/pages/aboutus.htm
@@ -65,7 +65,7 @@ function onStart()
 <div class="container" id="read-more">
 	<div class="row">
 		<div class="col-lg-12">
-			<h3>About Us</h3>
+			<h3>Overview</h3>
 			<p>In a world where technological and social developments can change the face of business faster than ever, we believe that commitment, expertise and passion are the key features of a thriving organization. A company's success depends greatly on creating an environment that encourages positive collaboration among people from different disciplines. We believe that passion is integral to an organization's overall well-being, as passion allows people to enjoy their work and feel connected to each other as well as to the organization. When people are passionate about what they do, their enthusiasm shows in the way they conduct themselves. Achievements become joint successes for both the employee and the company. What was once 'just a day at the office' then becomes a day of personal and professional satisfaction within a fulfilling career. This is the foundation on which we build our positive results and innovative solutions.</p>
 		</div>
 	</div>
@@ -94,7 +94,7 @@ function onStart()
 		</div>
 
 		<div class="row">
-			<div class="col-lg-6 col-sm-6" style="padding-bottom: 15px;">
+			<div class="col-lg-3 col-sm-6" style="padding-bottom: 15px;">
 				<div class="team-member wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 400ms; animation-delay: 0ms; animation-name: fadeInUp;">
 					<div class="team-img">
 						<img class="img-responsive"  src="{{ 'assets/images/team/siri.jpg'|theme }}" alt="ravishankar">
@@ -114,7 +114,8 @@ function onStart()
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-6 col-sm-6" style="padding-bottom: 15px;">
+
+			<div class="col-lg-3 col-sm-6" style="padding-bottom: 15px;">
 				<div class="team-member wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="100ms" style="visibility: visible; animation-duration: 400ms; animation-delay: 100ms; animation-name: fadeInUp;">
 					<div class="team-img">
 						<img class="img-responsive"  src="{{ 'assets/images/team/sudheer.jpg'|theme }}" alt="">
@@ -134,6 +135,49 @@ function onStart()
 					</ul>
 				</div>
 			</div>
+
+			<div class="col-lg-3 col-sm-6" style="padding-bottom: 15px;">
+				<div class="team-member wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="100ms" style="visibility: visible; animation-duration: 400ms; animation-delay: 100ms; animation-name: fadeInUp;">
+					<div class="team-img">
+						<img class="img-responsive"  src="{{ 'assets/images/team/matsola.png'|theme }}" alt="">
+					</div>
+					<div class="team-info">
+						<h3>Mats-Ola</h3>
+						<span>Co-Founder</span>
+					</div>
+					<!--<p>
+						Mats-Ola has more than 2 decades of Nordics experience in Telecommunication and Automotive industries. He has vast experience in Software/Hardware engineering and played key roles in different organizations in project management and new business development. He is multilingual and worked with people with different backgrounds and geographical locations. He is kind, honest, business-oriented, passionate and structured person, which helps his mission of helping the Swedish IT-industry by supplying competent engineers from outside and for gender equality.
+						</p>-->
+					<ul class="social-icons">
+						<li><a href="#"><i class="fa fa-facebook"></i></a></li>&nbsp;
+						<li><a href="#"><i class="fa fa-twitter"></i></a></li>&nbsp;
+						<li><a href="#"><i class="fa fa-google-plus"></i></a></li>&nbsp;
+						<li><a href="https://www.linkedin.com/in/nagarajanwimera"><i class="fa fa-linkedin"></i></a></li>&nbsp;
+					</ul>
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-sm-6" style="padding-bottom: 15px;">
+				<div class="team-member wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="100ms" style="visibility: visible; animation-duration: 400ms; animation-delay: 100ms; animation-name: fadeInUp;">
+					<div class="team-img">
+						<img class="img-responsive"  src="{{ 'assets/images/team/raj.png'|theme }}" alt="">
+					</div>
+					<div class="team-info">
+						<h3>Raj</h3>
+						<span>Co-Founder</span>
+					</div>
+					<!--<p>
+						Mats-Ola has more than 2 decades of Nordics experience in Telecommunication and Automotive industries. He has vast experience in Software/Hardware engineering and played key roles in different organizations in project management and new business development. He is multilingual and worked with people with different backgrounds and geographical locations. He is kind, honest, business-oriented, passionate and structured person, which helps his mission of helping the Swedish IT-industry by supplying competent engineers from outside and for gender equality.
+						</p>-->
+					<ul class="social-icons">
+						<li><a href="#"><i class="fa fa-facebook"></i></a></li>&nbsp;
+						<li><a href="#"><i class="fa fa-twitter"></i></a></li>&nbsp;
+						<li><a href="#"><i class="fa fa-google-plus"></i></a></li>&nbsp;
+						<li><a href="https://www.linkedin.com/in/nagarajanwimera"><i class="fa fa-linkedin"></i></a></li>&nbsp;
+					</ul>
+				</div>
+			</div>
+
 
 		</div>
 
