Raj review comments are updated

--- a/themes/oora/pages/aboutus.htm
+++ b/themes/oora/pages/aboutus.htm
@@ -4,7 +4,7 @@ layout = "oora"
 description = "About Us"
 is_hidden = 0
 ==
-
+<?php
 function onStart()
 {
     $filenames = array();
@@ -17,7 +17,7 @@ function onStart()
 
     $this["jobdescription"] = $filenames;
 }
-
+?>
 ==
 <!-- **********************************************************
 				HEADER Content
@@ -90,7 +90,7 @@ function onStart()
 <section id="meet-team">
 	<div class="container">
 		<div class="section-header">
-			<h2 class="section-title text-center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">Founders</h2> </br>
+			<h2 class="section-title text-center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">Our Team</h2> </br>
 		</div>
 
 		<div class="row">
@@ -143,7 +143,7 @@ function onStart()
 					</div>
 					<div class="team-info">
 						<h3>Mats-Ola</h3>
-						<span>Co-Founder</span>
+						<span>Sales Manager</span>
 					</div>
 					<!--<p>
 						Mats-Ola has more than 2 decades of Nordics experience in Telecommunication and Automotive industries. He has vast experience in Software/Hardware engineering and played key roles in different organizations in project management and new business development. He is multilingual and worked with people with different backgrounds and geographical locations. He is kind, honest, business-oriented, passionate and structured person, which helps his mission of helping the Swedish IT-industry by supplying competent engineers from outside and for gender equality.
@@ -164,7 +164,7 @@ function onStart()
 					</div>
 					<div class="team-info">
 						<h3>Raj</h3>
-						<span>Co-Founder</span>
+						<span>Director Indian Operations</span>
 					</div>
 					<!--<p>
 						Mats-Ola has more than 2 decades of Nordics experience in Telecommunication and Automotive industries. He has vast experience in Software/Hardware engineering and played key roles in different organizations in project management and new business development. He is multilingual and worked with people with different backgrounds and geographical locations. He is kind, honest, business-oriented, passionate and structured person, which helps his mission of helping the Swedish IT-industry by supplying competent engineers from outside and for gender equality.
