Spelling mistakes corrected

--- a/themes/oora/pages/careers.htm
+++ b/themes/oora/pages/careers.htm
@@ -134,7 +134,7 @@ function onSubmit()
 			<div class="col-lg-12">
 
 				<div id="successform" style="display: none;">
-					<h2> Congradulations! Mail has sent successfully.</h2>
+					<h2>Congratulations! Your CV has been submitted Successfully.</h2>
 				</div>
 
 				<div id="careerform">
