--- a/themes/oora/pages/contactus.htm
+++ b/themes/oora/pages/contactus.htm
@@ -78,7 +78,7 @@ function onSubmit()
 	<div class="container">
 		<div class="row ">
 			<div id="successform" style="display: none;">
-				<h2> Congradulations! Mail has sent successfully.</h2>
+				<h2>Congratulations! Mail has sent successfully.</h2>
 			</div>
 
 			<div id="contactform">
