Raj review comments are incorporated

--- a/themes/oora/pages/home.htm
+++ b/themes/oora/pages/home.htm
@@ -47,7 +47,7 @@ is_hidden = 0
 </div>
 
 
-<div id="fh5co-page">
+<!--<div id="fh5co-page">
 	<div class="">
 		<div class="container">
 			<div class="row">
@@ -63,7 +63,7 @@ is_hidden = 0
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/QiR6j1wkRPQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
 	</iframe>
 </div>
-
+-->
 
 <!-- content after carousel  -->
 <div id="fh5co-page">
