commented View All button

--- a/themes/oora/pages/home.htm
+++ b/themes/oora/pages/home.htm
@@ -292,11 +292,11 @@ is_hidden = 0
 				</div>
 				<div class="clearfix visible-sm-block"></div>
 			</div>
-			<div class="row">
+			<!--<div class="row">
 				<div class="col-md-4 col-md-offset-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="2s">
 					<a href="#" class="btn btn-primary btn-lg">View All</a>
 				</div>
-			</div>
+				</div>-->
 		</div>
 	</div>
 
